# 2019-tfm-omar-garrido

./: README.md
code/difodo/: README.md  package.xml
code/difodo/include/: CROSDifodo.h
code/odometry_evaluation_file_creator/: CMakeLists.txt  README.md  package.xml
code/odometry_evaluation_file_creator/include/: OdometryEvaluationCreator.h
code/odometry_evaluation_file_creator/launch/: TUM_dataset_rosify_difodo.launch  TUM_dataset_sdslam.launch  odometry_evaluation_creator.launch
code/odometry_evaluation_file_creator/launch/config/: evaluator_config.yaml  rosify_difodo_evaluator_config.yaml  sdslam_evaluator_config.yaml
code/odometry_evaluation_file_creator/src/: OdometryEvaluationCreator.cpp  main.cpp
code/rosify_difodo/: CMakeLists.txt  README.md  package.xml
code/rosify_difodo/include/: CROSDifodo.h
code/rosify_difodo/launch/: ros_difodo.launch  ros_difodo_TUM.launch  ros_difodo_TUM_evaluation_file.launch  ros_difodo_and_realsense.launch  ros_difodo_and_realsense_default.launch  rs_rgbd.launch
code/rosify_difodo/src/: CROSDifodo.cpp  main.cpp
docs/: index.md
docs/_pages/: home.md  install.md
docs/_posts/entries/: 2019-02-02-entry1.md  2019-02-22-entry2.md  2019-03-03-entry3.md  2019-03-20-entry4.md  2019-09-27-entry5.md  2019-11-06-entry6.md  2019-11-23-entry7.md  2019-12-01-entry8.md  2019-12-28-entry9.md  2020-01-07-entry10.md  2020-01-19-entry11.md  2020-01-24-entry12.md  2020-02-02-entry13.md  2020-02-10-entry14.md  2020-02-22-entry15.md  2020-03-20-entry16.md  2020-03-22-entry17.md  2020-03-29-entry18.md  2020-04-17-entry19.md  2020-05-03-entry20.md
docs/assets/images/entry20_images/test_1/: APE_v1  APE_v2  f1_desk1_v1.txt  v2.txt
docs/entries/: entry1.md  entry2  entry3.md  entry4
master_thesis/: PRESENTACION-TFM-OGM.pptx
scripts/: compare_groundtruth_odometry_TUM.py  get_ATE.py  process_all_sequences_TUM.sh  process_one_TUM_sequence.sh
scripts/metrics/: f1_SD_SLAM-ape_results.csv  f1_SD_SLAM-rpe_results.csv  f1_rosify_difodo-ape_results.csv  f1_rosify_difodo-rpe_results.csv  f1_rosify_difodo_downsample_1_pyramid_5-ape_results.csv  f1_rosify_difodo_downsample_2_pyramid_1-ape_results.csv  f1_rosify_difodo_downsample_2_pyramid_3-ape_results.csv  f1_rosify_difodo_downsample_2_pyramid_5-ape_results.csv  f1_rosify_difodo_downsample_4_pyramid_5-ape_results.csv  f3_SD_SLAM-ape_results.csv  f3_SD_SLAM-rpe_results.csv  f3_rosify_difodo-ape_results.csv  f3_rosify_difodo-rpe_results.csv  f3_rosify_difodo_downsample_1_pyramid_5-ape_results.csv  f3_rosify_difodo_downsample_2_pyramid_1-ape_results.csv  f3_rosify_difodo_downsample_2_pyramid_3-ape_results.csv  f3_rosify_difodo_downsample_2_pyramid_5-ape_results.csv  f3_rosify_difodo_downsample_4_pyramid_5-ape_results.csv
